<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015-present, Parse, LLC.
  ~ All rights reserved.
  ~
  ~ This source code is licensed under the BSD-style license found in the
  ~ LICENSE file in the root directory of this source tree. An additional grant
  ~ of patent rights can be found in the PATENTS file in the same directory.
  -->
<resources>
    <string name="parse_app_id" translatable="false">YOUR_APPLICATION_ID</string>
    <string name="parse_client_key" translatable="false">YOUR_CLIENT_KEY</string>
    <string name="facebook_app_id" translatable="false">1840911756135860</string>

    <string name="app_name" translatable="false">Pebkar</string>

    <string name="hello_world" translatable="false">Hello World!</string>
    <string name="action_settings">Paramètres</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="no_connection">Veuillez vous connecter pour effectuer cette action.</string>
    <string name="error_unknown">Une erreur est survenue.</string>
    <string name="action_example" translatable="false">Pebkar</string>
    <string name="todo">Fonction non implémentée</string>

    <string name="btn_debug" translatable="false">DEBUG</string>
    <string name="btn_recherche">Rechercher</string>
    <string name="logo_pebkar" translatable="false">Logo Pebkar</string>
    <string name="title_activity_search">Rechercher</string>

    <!-- activity_search.xml -->
    <string name="filtre">Filtre</string>
    <string name="ville">Ville de départ :</string>
    <string name="ville_arrivee">Ville d\'arrivée :</string>
    <string name="ville_hint">Entrez une ville ici…</string>
    <string name="valider">Valider</string>

    <!-- Connexion -->

    <string name="connect">Se connecter</string>
    <string name="disconnect">Se déconnecter</string>
    <string name="connected">Connexion réussie</string>
    <string name="connectionFailed">Connexion échouchée</string>
    <string name="fb_disconnected">Vous êtes désormais déconnecté de Facebook</string>
    <string name="fb_connected">Vous êtes désormais connecté à Facebook</string>
    <string name="fb_disconnection_error">Erreur lors de la déconnexion à Facebook</string>

    <!-- Dialogue search - sélection -->
    <string name="d_search_title">Détails du voyage</string>
    <string name="d_search_vers">vers</string>
    <string name="d_search_datedepart">Départ le</string>
    <string name="d_search_datearrivee">Arrivée le</string>
    <string name="d_search_loading">Chargement des données en cours…</string>
    <string name="d_search_error">Erreur lors du chargement des données</string>

    <!-- Jours de la semaine -->

    <string name="monday">Lundi</string>
    <string name="tuesday">Mardi</string>
    <string name="wednesday">Mercredi</string>
    <string name="thursday">Jeudi</string>
    <string name="friday">Vendredi</string>
    <string name="saturday">Samedi</string>
    <string name="sunday">Dimanche</string>

    <!-- Search Dialog -->
    <string name="inscription">S\'inscrire</string>
    <string name="retourner">Retour</string>
    <string name="notEnoughPlaces">Plus de places disponibles</string>
    <string name="inscriptionValidee">Inscription réussie</string>
    <string name="inscriptionDejaFaite">Inscription déjà effectuée à ce voyage</string>

    <!-- A propos de -->
    <string name="aboutMenu">À propos de…</string>
    <string name="about2">L\'application fonctionne grâce à l\'API de Facebook, un compte Facebook est donc <b>requis</b> pour utiliser Pebkar.</string>
    <string name="authors">Auteurs</string>0
    <string name="author_d" translatable="false">Durighello David</string>
    <string name="author_h" translatable="false">Hendrickx Matthias</string>
    <string name="about"><b>Pebkar</b> est une application développée dans le but de faciliter le covoiturage entre plusieurs voyageurs.</string>
</resources>
