<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="com.app.pebkar.Search">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filtre"
        android:id="@+id/tv_search"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ville"
        android:id="@+id/tv_ville"
        android:layout_below="@+id/tv_search"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ville_arrivee"
        android:id="@+id/tv_ville2"
        android:textSize="20sp"
        android:layout_below="@+id/et_ville"
        android:layout_alignRight="@+id/tv_ville"
        android:layout_alignEnd="@+id/tv_ville" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/ville_hint"
        android:id="@+id/et_ville2"
        android:textSize="20sp"
        android:layout_alignBaseline="@+id/tv_ville2"
        android:paddingBottom="8dp"
        android:layout_below="@+id/tv_ville"
        android:layout_toRightOf="@+id/tv_ville2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/et_ville"
        android:hint="@string/ville_hint"
        android:textSize="20sp"
        android:layout_marginTop="25dp"
        android:paddingBottom="8dp"
        android:layout_alignTop="@+id/tv_search"
        android:layout_toRightOf="@+id/tv_ville2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/valider"
        android:id="@+id/bt_filtre"
        android:layout_below="@+id/et_ville2"
        android:layout_centerHorizontal="true"
        android:onClick="btn_filtre" />

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lv_search"
        android:layout_below="@+id/bt_filtre"
        android:nestedScrollingEnabled="true" />
</RelativeLayout>
