<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:stretchColumns="*"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <TextView
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:id="@+id/tv_d_search_title"
            android:text="@string/d_search_title"
            android:textStyle="bold"
            android:textSize="20sp"
            android:paddingTop="6sp"
            android:paddingBottom="6sp"
            />
        <View
            android:layout_width="wrap_content"
            android:layout_height="1dp"
            android:background="@color/accent_material_light"
            android:id="@+id/v_d_search_title"
            />

    <TableRow
        android:paddingTop="8sp">
            <TextView
                android:textSize="18sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:id="@+id/tv_d_search_lieudepart"/>

            <TextView
                android:textSize="18sp"
                android:textAlignment="center"
                android:layout_span="2"
                android:gravity="center_horizontal"
                android:text="@string/d_search_vers"
                android:textStyle="bold"/>

            <TextView
                android:textSize="18sp"
                android:textAlignment="center"
                android:gravity="center_horizontal"
                android:id="@+id/tv_d_search_lieuarrivee"/>
    </TableRow>

    <TableRow
        android:paddingTop="20sp">

        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_span="2"
            android:text="@string/d_search_datedepart"
            android:gravity="center_horizontal"/>

        <TextView
            android:textSize="15sp"
            android:textStyle="bold"
            android:layout_span="2"
            android:text="@string/d_search_datearrivee"
            android:gravity="center_horizontal"/>
    </TableRow>

    <TableRow
        android:paddingTop="5sp">

        <TextView
            android:textSize="15sp"
            android:layout_span="2"
            android:id="@+id/tv_d_search_datedepart"
            android:gravity="center_horizontal"/>

        <TextView
            android:textSize="15sp"
            android:layout_span="2"
            android:id="@+id/tv_d_search_datearrivee"
            android:gravity="center_horizontal"/>
    </TableRow>

</TableLayout>